--- a/src/app/Manager/gestion-poste-by-id/gestion-poste-by-id.component.html
+++ b/src/app/Manager/gestion-poste-by-id/gestion-poste-by-id.component.html
@@ -51,7 +51,7 @@
               <a class="nav-link" id="sales-tab" data-bs-toggle="tab" href="#sales" role="tab" aria-controls="sales" aria-selected="false">Candidats</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Stat</a>
+              <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
             </li>
           </ul>
           <div class="tab-content py-0 px-0">
@@ -119,15 +119,24 @@
                               </div>
             <div class="tab-pane fade" id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
            <!-- app.component.html -->
-           <ul *ngFor="let candidature of candidatures">
-          <li>{{ candidature.nom }} {{ candidature.prenom }}</li></ul>
+          
 <!-- app.component.html -->
 <div class="kanban-board" cdKDropListGroup>
   <!-- Colonne En attente -->
   <div class="kanban-column" cdkDropList [cdkDropListData]="candidatures" id="EN_ATTENTE" (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
     <h3>En attente</h3>
     <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'EN_ATTENTE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">{{ candidature.nom }} {{ candidature.prenom }}</div>
+      <div class="kanban-card">
+        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+        <div class="profile-info">
+           {{ candidature.nom }} {{ candidature.prenom }}
+        </div>
+              <button (click)="openModal(candidature.candidature_id)" class="btn btn-inverse-secondary btn-icon">
+                <i class="mdi mdi mdi-eye      "></i>
+              </button>
+
+       </div>
+
     </div>
   </div>
 
@@ -135,8 +144,17 @@
   <div class="kanban-column" cdkDropList [cdkDropListData]="candidatures" id="ACCEPTEE" (cdkDropListDropped)="onDrop($event, 'ACCEPTEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'REFUSEE']">
     <h3>Acceptées</h3>
     <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'ACCEPTEE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">{{ candidature.nom }} {{ candidature.prenom }}</div>
-      <button (click)="openModal(candidature.candidature_id)" class="btn btn-success">Voir</button>
+      <div class="kanban-card">
+        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+        <div class="profile-info">
+           {{ candidature.nom }} {{ candidature.prenom }}
+        </div>
+              <button (click)="openModal(candidature.candidature_id)" class="btn btn-inverse-secondary btn-icon">
+                <i class="mdi mdi mdi-eye      "></i>
+              </button>
+
+       </div>
+       
     </div>
   </div>
 
@@ -144,35 +162,22 @@
   <div class="kanban-column" cdkDropList [cdkDropListData]="candidatures" id="REFUSEE" (cdkDropListDropped)="onDrop($event, 'REFUSEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']">
     <h3>Refusées</h3>
     <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'REFUSEE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">{{ candidature.nom }} {{ candidature.prenom }}</div>
-      <button (click)="openModal(candidature.candidature_id)" class="btn btn-danger">Voir</button>
+      <div class="kanban-card">
+        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+        <div class="profile-info">
+           {{ candidature.nom }} {{ candidature.prenom }}
+        </div>
+              <button (click)="openModal(candidature.candidature_id)" class="btn btn-inverse-secondary btn-icon">
+                <i class="mdi mdi mdi-eye      "></i>
+              </button>
+
+       </div>
+     
     </div>
   </div>
 </div>
 
 
-<!-- <div class="kanban-board" cdKDropListGroup>
-  <div class="kanban-column" cdkDropList [cdkDropListData]="candidats" id="EN_ATTENTE" (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
-    <h3>En attente</h3>
-    <div class="kanban-cards" *ngFor="let candidat of candidats | filter:'EN_ATTENTE'" cdkDrag [id]="candidat.id">
-      {{ candidat.nom }} {{ candidat.prenom }}
-    </div>
-  </div>
-  <div class="kanban-column" cdkDropList [cdkDropListData]="candidats" id="ACCEPTEE" (cdkDropListDropped)="onDrop($event, 'ACCEPTEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'REFUSEE']">
-    <h3>Acceptées</h3>
-    <div class="kanban-cards" *ngFor="let candidat of candidats | filter:'ACCEPTEE'" cdkDrag [id]="candidat.id">
-      <div class="kanban-card">{{ candidat.nom }} {{ candidat.prenom }}</div>
-      <button (click)="openModal(candidat.id)" class="btn btn-success">Voir</button>
-    </div>
-  </div>
-  <div class="kanban-column" cdkDropList [cdkDropListData]="candidats" id="REFUSEE" (cdkDropListDropped)="onDrop($event, 'REFUSEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']">
-    <h3>Refusées</h3>
-    <div class="kanban-cards" *ngFor="let candidat of candidats | filter:'REFUSEE'" cdkDrag [id]="candidat.id">
-      {{ candidat.nom }} {{ candidat.prenom }}
-      <button (click)="openModal(candidat.id)" class="btn btn-danger">Voir</button>
-    </div>
-  </div>
-</div> -->
 
          
               
